# pgon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.txt
PGoN_build/: CMakeCache.txt  HOW_TO_CMAKE  Makefile  PGoN  cmake_install.cmake
include/: city.h  colorer.h  creature.h  dna.h  hash_pair.h  logger.h  object.h  playerinput.h  room.h  world.h
include/entity/: building.h  human.h  shrine.h
src/: city.cpp  colorer.cpp  creature.cpp  logger.cpp  main.cpp  object.cpp  playerinput.cpp  room.cpp  world.cpp
